# colorose

./: Cargo.toml  README.md  build.rs  resource.rc
src/: app.rs  color.rs  cursor_color.rs  get_cursor_color.rs  main.rs  tray.rs  utils.rs
src/app/: app.rs  app_state.rs  mod.rs
src/model/: color.rs  mod.rs  position.rs  wheel_mode.rs
src/service/: cursor_color.rs  mod.rs  utils.rs
src/ui/: mod.rs  screen.rs  wheel.rs
ui/: app-window.slint
