[package]
name = "screen_color"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["glow"] }
egui = "0.32.0"
# iced = "0.13.1"
# mouse-rs = "0.4.2"
screenshots = "0.8.10"
slint = "1.12.1"
tokio = "1.47.1"
tray-item = "0.10.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }


[build-dependencies]
winres = "0.1"
slint-build = "1.12.1"

[package.metadata.winres]
# WindowsSubsystem = "windows" 
IconPath = "resources/app-icon.ico"

[[bin]]
name = "colorose"
path = "src/main.rs"
