[package]
name = "screen_color"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["glow"] }
egui = "0.32.0"
image = "0.25.6"
screenshots = "0.8.10"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }


[build-dependencies]
winres = "0.1"

[package.metadata.winres]
# WindowsSubsystem = "windows" 
IconPath = "resources/app-icon.ico"

[[bin]]
name = "colorose"
path = "src/main.rs"
